--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -14,6 +14,7 @@ a:hover
 
 #header-bar
 	&-pri
+		box-shadow: inset 0 -1px $color-background-dark
 		display: flex
 		align-items: center
 		width: 100%
