Remove thumbnail when non existant

--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -29,11 +29,6 @@ $item-thumbnail-size: 90px
 	width: $item-thumbnail-size
 	min-width: $item-thumbnail-size
 	overflow: hidden
-	background-color: $color-background
-	color: $color-text-hint
-
-	&.has-thumbnail
-		background-color: transparent
 
 	+media-xs
 		width: 100%
@@ -43,15 +38,13 @@ $item-thumbnail-size: 90px
 		.item-thumbnail-picture
 			width: 100%
 
-
 	.item-thumbnail-picture
 		position: absolute
 		width: 100%
-		height: $item-thumbnail-size
 		transition: transform 150ms ease-in-out
 		border-radius: 50%
 		box-shadow: 2px 2px 0 rgba(black, .1)
-		background-color: $color-background
+		background-color: $color-background-dark
 		overflow: hidden
 		display: flex
 		justify-content: center
