--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -43,7 +43,7 @@ ul.list-hits
 	.item-content
 		padding: 10px 0
 	.item-title
-		font-size: $font-size-large
+		font-size: $font-size-extra-large
 		color: $color-primary
 
 		.emoji
