More prominent main post

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -56,6 +56,9 @@ ul.list-hits
 	.item-details
 		padding: 5px 0
 
+	&#col_right
+		background-color: $color-background-lighter
+
 #list-item
 	height: 100%
 	overflow-x: hidden
