--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -11,7 +11,8 @@
 	display: flex
 	align-items: center
 	justify-content: center
-	background-color: $color-background-lighter
+	background-color: $color-background-light
+	border-bottom: thin solid $color-background-dark
 
 	iframe
 		width: 100%
@@ -322,7 +323,6 @@ $item-thumbnail-size: 90px
 .item-body
 	font-size: $font-size
 	line-height: 1.5em
-	border-top: thin solid $color-background-dark
 	border-bottom: thin solid $color-background-dark
 
 
@@ -347,7 +347,8 @@ $item-thumbnail-size: 90px
 
 	&.link
 		.item-body
-			background-color: $color-background
+			border-top: thin solid $color-background-dark
+			background-color: $color-background-light
 			display: flex
 			align-items: center
 
