Introducing: Buttons with dropdowns
They use a similar syntax as bootstrap.

.btn-group contains the main button, a button with the .dropdown-toggle class, and the ul.dropdown-menu item.

An additional ".right" class can be added to the ul.dropdown-menu to make it align to the right

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -45,6 +45,36 @@ button, .btn
 	&.cancel
 		+button($color-text-light, 3px, false)
 
+.btn-group
+	display: flex
+	position: relative
+	border-radius: 3px
+	color: $color-text
+	border-radius: 3px
+
+	button
+		&.btn-success
+			+button($color-success, 3px, true)
+		&.btn-info
+			+button($color-info, 3px, true)
+		&.btn-danger
+			+button($color-danger, 3px, true)
+		&.btn-warning
+			+button($color-warning, 3px, true)
+
+		border-top-right-radius: 0 !important
+		border-bottom-right-radius: 0 !important
+
+		&.dropdown-toggle
+			padding: 0 5px
+			border-top-left-radius: 0 !important
+			border-bottom-left-radius: 0 !important
+			border-top-right-radius: 3px !important
+			border-bottom-right-radius: 3px !important
+
+			i
+				margin: 0
+
 select, textarea, input
 	box-shadow: 1px 2px 2px $color-background-dark
 
@@ -71,66 +101,69 @@ nav
 				&.dropdown
 					position: relative
 
-					.dropdown-toggle
-						cursor: pointer
+.dropdown-toggle
+	cursor: pointer
 
-						&:hover
-							img.avatar
-								transform: scale(1.1)
+	&:hover
+		img.avatar
+			transform: scale(1.1)
 
-						&.active
-							img.avatar
-								background-color: $color-primary
+	&.active
+		img.avatar
+			background-color: $color-primary
 
-						img.avatar
-							border-radius: 50%
-							width: 32px
-							height: 32px
-							background-color: $color-background-light
-							padding: 3px
-							margin-right: 10px
-							transition: transform 100ms ease-in-out, background-color 150ms ease-in-out
+	img.avatar
+		border-radius: 50%
+		width: 32px
+		height: 32px
+		background-color: $color-background-light
+		padding: 3px
+		margin-right: 10px
+		transition: transform 100ms ease-in-out, background-color 150ms ease-in-out
 
-						.dropdown-toggle-icon
-							position: absolute
-							bottom: 0
-							right: 0
+	.dropdown-toggle-icon
+		position: absolute
+		bottom: 0
+		right: 0
 
-					ul.dropdown-menu
-						display: none
-						visibility: hidden
-						flex-direction: column
-						list-style: none
-						margin: 2px 0 0 0
-						padding: 0
-						position: absolute
-						top: 100%
-						right: 0
-						min-width: 150px
-						border-bottom-left-radius: 3px
-						border-bottom-right-radius: 3px
+ul.dropdown-menu
+	display: none
+	visibility: hidden
+	flex-direction: column
+	list-style: none
+	margin: 2px 0 0 0
+	padding: 0
+	position: absolute
+	z-index: 1
+	top: 100%
+	min-width: 150px
+	border-bottom-left-radius: 3px
+	border-bottom-right-radius: 3px
 
-						li
-							display: flex
-							align-items: center
-							border-bottom: thin solid $color-background
-							a
-								padding: 10px
-								display: flex
-								width: 100%
-								align-items: center
-								text-decoration: none
-								color: $color-text-dark
+	&.right
+		right: 0
 
-								&:hover
-									color: $color-primary
+	li
+		display: flex
+		align-items: center
+		border-bottom: thin solid $color-background
+		a
+			padding: 10px
+			display: flex
+			width: 100%
+			align-items: center
+			text-decoration: none
+			color: $color-text-dark
 
-								i
-									margin-right: 5px
+			&:hover
+				color: $color-primary
 
-						&.active
-							display: flex
-							visibility: visible
+			i
+				margin-right: 5px
+
+	&.active
+		display: flex
+		visibility: visible
 
 .wgt-search input
 	padding-left: 10px
