--- a/src/templates/dillo/layout.pug
+++ b/src/templates/dillo/layout.pug
@@ -57,7 +57,7 @@ html(lang='en')
 								.dropdown-toggle-icon
 									i.pi-angle-down
 
-							ul.dropdown-menu
+							ul.dropdown-menu.right
 								li
 									a(
 										href="{{ url_for('users.settings_profile') }}"
