Use keyup event for content editing

--- a/src/templates/nodes/edit.pug
+++ b/src/templates/nodes/edit.pug
@@ -157,7 +157,7 @@ script.
 		var $item_icon = $('#item-icon');
 		var $item_title = $('#item-title');
 
-		$item_content_input.on('keydown', function () {
+		$item_content_input.on('keyup', function () {
 
 			$item_icon.html('<i class="pi-spin spin"></i>');
 			// Wait a bit before calling the spoon
