--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -6,10 +6,11 @@ ul.list-hits
 		display: flex
 		flex-direction: row-reverse
 		height: 100%
-		background-color: $color-background-light
+		background-color: $color-background-lighter
 		border-radius: 3px
 		box-shadow: 1px 2px 2px $color-background-dark, inset -5px 0 0  $color-background-dark
-		padding-right: 5px
+		padding-right: 10px
+		transition: transform 100ms ease-in-out
 		+clearfix
 
 		+media-xs
@@ -19,8 +20,9 @@ ul.list-hits
 			border-radius: 2px
 
 		&.active
-			background-color: white
-			box-shadow: 1px 2px 2px $color-background-dark, inset -5px 0 0  $color-secondary
+			box-shadow: 1px 2px 2px $color-background-dark, inset -5px 0 0  $color-secondary, inset 5px 0 0  $color-secondary
+			position: relative
+			transform: translateX(5px)
 
 			+media-xs
 				box-shadow: 1px 2px 2px $color-background-dark, 0 -5px 0  $color-secondary
