Temporary fix for embedly extract exceed

--- a/dillo/src/themes/dillo/templates/posts/form.jade
+++ b/dillo/src/themes/dillo/templates/posts/form.jade
@@ -117,79 +117,82 @@ script.
 		});
 
 
-
-
 		{% if current_user.is_authenticated() %}
+
+		// Temporary solution for embedly
+		$('.post-submit-div-title').show();
+		$('.post-submit-div-category').show();
+		$('.post-submit-div-picture').show();
+		$('.post-submit-field-loading').removeClass('disabled error');
+		$('.post-submit-div-submit').show();
 
 		$.embedly.defaults.key = '{{config.EMBEDLY_APY_KEY}}';
 
-		$('#url').keyup(function (event) {
-			var url = $('#url').val();
+		//- $('#url').keyup(function (event) {
+		//- 	var url = $('#url').val();
 
-			// We're trying to load the link stuff
-			$('.post-submit-field-loading').html('<i class="di-spinner spin"></i>');
+		//- 	// We're trying to load the link stuff
+		//- 	$('.post-submit-field-loading').html('<i class="di-spinner spin"></i>');
 
-			$.embedly.extract(url).progress(function (data) {
+		//- 	$.embedly.extract(url).progress(function (data) {
 
-				$('.post-submit-field-loading').removeClass('error');
+		//- 		$('.post-submit-field-loading').removeClass('error');
 
-				if (data.url == '') {
-					$('.post-submit-field-loading').html('');
-				}
-				;
+		//- 		if (data.url == '') {
+		//- 			$('.post-submit-field-loading').html('');
+		//- 		}
+		//- 		;
 
-				// Clear the loading
-				if (data.error) {
-					$('.post-submit-field-loading').html('');
-					$('.post-submit-field-loading').removeClass('success');
-					$('.post-submit-field-loading').addClass('error');
-					$('.post-submit-field-submit').addClass('disabled');
-				} else {
-					$('.post-submit-field-loading').html('<i class="di-check"></i>');
-					$('.post-submit-field-loading').addClass('success');
-					$('.post-submit-field-submit').removeClass('disabled');
-				}
-				;
+		//- 		// Clear the loading
+		//- 		if (data.error) {
+		//- 			$('.post-submit-field-loading').html('');
+		//- 			$('.post-submit-field-loading').removeClass('success');
+		//- 			$('.post-submit-field-loading').addClass('error');
+		//- 			$('.post-submit-field-submit').addClass('disabled');
+		//- 		} else {
+		//- 			$('.post-submit-field-loading').html('<i class="di-check"></i>');
+		//- 			$('.post-submit-field-loading').addClass('success');
+		//- 			$('.post-submit-field-submit').removeClass('disabled');
+		//- 		}
+		//- 		;
 
-				if (data.error_code) {
-					$('.post-submit-field-loading').html(data.error_code);
-					$('.post-submit-field-loading').addClass('error');
-					$('.post-submit-field-submit').addClass('disabled');
-				} else {
-					$('.post-submit-field-loading').removeClass('error');
-				}
-				;
+		//- 		if (data.error_code) {
+		//- 			$('.post-submit-field-loading').html(data.error_code);
+		//- 			$('.post-submit-field-loading').addClass('error');
+		//- 			$('.post-submit-field-submit').addClass('disabled');
+		//- 		} else {
+		//- 			$('.post-submit-field-loading').removeClass('error');
+		//- 		}
+		//- 		;
 
-				if (data.favicon_url) {
-					$('.post-submit-field-favicon').html('<img src="' + data.favicon_url + '"/>')
-				} else {
-					$('.post-submit-field-favicon').html('<i class="di-link"></i>')
-				}
-				;
+		//- 		if (data.favicon_url) {
+		//- 			$('.post-submit-field-favicon').html('<img src="' + data.favicon_url + '"/>')
+		//- 		} else {
+		//- 			$('.post-submit-field-favicon').html('<i class="di-link"></i>')
+		//- 		}
+		//- 		;
 
-				$('.post-submit-div-title').show();
-				$('.post-submit-div-category').show();
-				$('.post-submit-div-picture').show();
+		//- 		$('.post-submit-div-title').show();
+		//- 		$('.post-submit-div-category').show();
+		//- 		$('.post-submit-div-picture').show();
 
-				if (data.title) {
-					$('#title').val(data.title);
-				}
-				;
+		//- 		if (data.title) {
+		//- 			$('#title').val(data.title);
+		//- 		}
+		//- 		;
 
-				if (data.images && data.images.length > 0) {
-					$('.picture-remote-container').html('<img src="' + data.images[0].url + '"/>');
-					$('.post-submit-div-picture-remote').css('display', 'block');
-					$('#picture_remote').val(data.images[0].url);
-					$('.post-submit-div-picture').hide();
-				}
-				;
+		//- 		if (data.images && data.images.length > 0) {
+		//- 			$('.picture-remote-container').html('<img src="' + data.images[0].url + '"/>');
+		//- 			$('.post-submit-div-picture-remote').css('display', 'block');
+		//- 			$('#picture_remote').val(data.images[0].url);
+		//- 			$('.post-submit-div-picture').hide();
+		//- 		}
+		//- 		;
 
-				$('.post-submit-div-submit').show();
+		//- 		$('.post-submit-div-submit').show();
 
-			}); // embedly
-		});
-
-		$('post-submit-div-submit').css('display', 'block');
+		//- 	}); // embedly
+		//- });
 
 		$('#dismiss-picture-remote').click(function () {
 			$('#picture_remote').val('');
