Temporary fix for embedly part 2, remove disabled tag.

--- a/dillo/src/themes/dillo/templates/posts/form.jade
+++ b/dillo/src/themes/dillo/templates/posts/form.jade
@@ -99,7 +99,7 @@ form#submit_post_form(
 		.post-submit-div-submit
 			.row
 				.col-md-6.col-md-push-3
-					button.btn.btn-default.btn-block.submit.post-submit-field-submit.disabled(
+					button.btn.btn-default.btn-block.submit.post-submit-field-submit(
 						type="submit")
 						i.di-check
 						|  Submit!
@@ -292,7 +292,7 @@ script.
 
 				$('#url').focus()
 
-				$('.post-submit-field-submit').addClass('disabled');
+				//- $('.post-submit-field-submit').addClass('disabled');
 
 			};
 
