--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -28,7 +28,7 @@
 
 	.item-body#item-content
 		| {% if node.properties.post_type == 'text' %}
-		| {{ node.properties.content_html | hide_none | safe }}
+		| {{ node.properties.content_html }}
 		| {% elif node.properties.post_type == 'link' and not node.properties.content_html %}
 		a(
 			href="{{ node.properties.content }}",
