Lists: Don't indent on click

--- a/src/styles/_list.sass
+++ b/src/styles/_list.sass
@@ -20,9 +20,8 @@ ul.list-hits
 			border-radius: 2px
 
 		&.active
-			box-shadow: 1px 2px 2px $color-background-dark, inset -5px 0 0  $color-secondary, inset 5px 0 0  $color-secondary
+			box-shadow: 1px 2px 2px $color-background-dark, inset -5px 0 0  $color-secondary
 			position: relative
-			transform: translateX(5px)
 
 			+media-xs
 				box-shadow: 1px 2px 2px $color-background-dark, 0 -5px 0  $color-secondary
